// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Transaction Should render Transaction correctly 1`] = `
<div
  className="transaction"
>
  <div
    className="transaction__data"
  >
    <h3
      className="heading-3 mb-s"
    >
      Bills
    </h3>
    <p
      className="transaction__value"
    >
      41,00 €
       / 
      182,86 PLN
    </p>
  </div>
  <button
    className="btn btn--link transaction__btn"
    onClick={[MockFunction]}
  >
    Remove
  </button>
</div>
`;

exports[`COMPONENT - Transaction Should render Transaction without the remove button 1`] = `
<div
  className="transaction"
>
  <div
    className="transaction__data"
  >
    <h3
      className="heading-3 mb-s"
    >
      Bills
    </h3>
    <p
      className="transaction__value"
    >
      41,00 €
       / 
      182,86 PLN
    </p>
  </div>
</div>
`;
